@@ -7,6 +7,7 @@ Contact us (see: AUTHORS) and we'll add you.
 James Bowes
 Abel Daniel
 Nathan Fredrickson
+Javier Amor García
 Steven Garrity
 Dan Korostelev
 Christian Neumair 
