@@ -53,6 +53,8 @@ outliner_action_new (GtkAction *action, OutlinerWindow *window)
   view = outliner_window_get_view(window);
   doc = outliner_view_get_document(view);
 
+  outliner_file_save_changed(window, doc);
+
   gtk_tree_store_clear(GTK_TREE_STORE (doc));
   outliner_view_add_item(view);
 }
@@ -66,6 +68,8 @@ outliner_action_open (GtkAction *action, OutlinerWindow *window)
   view = outliner_window_get_view(window);
   doc = outliner_view_get_document(view);
 
+  outliner_file_save_changed(window, doc);
+
   outliner_file_open(window, doc);
 }
 
@@ -78,6 +82,7 @@ outliner_action_open_location (GtkAction *action, OutlinerWindow *window)
   view = outliner_window_get_view(window);
   doc = outliner_view_get_document(view);
 
+  outliner_file_save_changed(window, doc);
   /* TODO: open doc from location */
 }
 
@@ -115,6 +120,23 @@ outliner_action_export (GtkAction *action, OutlinerWindow *window)
   doc = outliner_view_get_document(view);
 
   /* TODO: export the doc */
+}
+
+void
+outliner_action_quit (GtkAction *action, OutlinerWindow *window)
+{
+  OutlinerView *view;
+  OutlinerDocument *doc;
+
+  view = outliner_window_get_view(window);
+  doc = outliner_view_get_document(view); 
+  outliner_file_save_changed(window, doc);
+  if (doc->changed)
+    g_printf("doch changed\n");
+  else
+    g_printf("doch NOT changed\n");
+  gtk_main_quit();
+
 }
 
 
